Fix about and work problem with padding
The problem I was experiencing with small screens when I click on the
about or work link in the navigation some of the sections content were
hidden under the header background color. I tried to do it in the
workshop last time but the solution we came to wasn’t working all the
time. I thought about why not add some padding before the content of
each section so when I click this amount of whitespace will be hidden
under the header and the beginning of the content as text or image will
appear just after the header. It worked and it served its purpose but I
believe there might be a way to do it with js. I will try to find out
next workshop what could be done.

--- a/css/style1.css
+++ b/css/style1.css
@@ -19,6 +19,7 @@ body, html {
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	height: 100vh;
 	background-image: url("../images/cover1.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
@@ -33,7 +34,7 @@ body, html {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	padding: 10px 0 10px;
+	padding: 5px 0;
 }
 
 .has-color .header {
@@ -44,7 +45,7 @@ body, html {
 
 .myName {
 	margin: 0;
-	padding: 10px;
+	padding: 8px 0 0;
 	font-family: 'Lobster Two', cursive;
 	font-weight: 700;
 	letter-spacing: 3px;
@@ -71,7 +72,7 @@ body, html {
 	color: #fff;
 	text-align: center;
 	text-decoration: none;
-	padding: 10px;
+	padding: 10px 12px;
 	font-size: 15px;
 }
 
@@ -89,7 +90,7 @@ body, html {
 .contact {
 	width: 100%;
 	margin: 0 auto;
-	padding: 3em 4%;
+	padding: 6.5em 4% 6em;
 }
 
 .contact h2 {
@@ -122,7 +123,7 @@ p {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	padding: 50px 0 30px;
+	padding: 7em 0 5em;
 }
 
 .myPortfolio a {
@@ -130,7 +131,7 @@ p {
 	text-decoration: none;
 	display: block;
 	box-shadow: 0 0 3px 2px #ccc;
-	margin-bottom: 20px;
+	margin-bottom: 2em;
 }
 
 img {
@@ -198,7 +199,11 @@ small {
 	.about,
 	.contact {
 		max-width: 27rem;
-		padding: 5em 2%;
+		padding: 6.5em 2%;
+	}
+
+	.myPortfolio {
+		padding: 8em 0 6em;
 	}
 
 	.myPortfolio a {
